# piper

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_curated.py  0003_security.py  0004_devices.py  0005_rbac_hardening.py
db/schema/: schema.sql
design/: README.md
design/chats/: chat1.md
design/project/: .thumbnail  Aegis.dc.html  Piper.dc.html
docker/: Dockerfile
docs/: 00-scope.md  01-architecture.md  02-tech-stack.md  03-data-sources.md  04-security.md  05-compliance.md  06-data-model.md  07-roadmap.md  08-dataset-analysis.md  09-database-comparison.md  10-test-report.md  README.md  TESTING.md  audit-findings.md  bias-mitigation.md  frontend-master-prompt.md  security-policy.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-python-as-language.md  0003-consolidated-postgres-timescaledb.md  0004-docker-compose-local.md  0005-dual-ingest-batch-and-webhook.md  0006-pseudonymisation-and-encryption.md  0007-defer-frontend.md  0008-application-layer-encryption-key-custody.md  0009-analytical-domains-and-linkage.md  0010-orchestration-run-model.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Pipeline.tsx  ui.tsx
frontend/src/lib/: motion.ts
frontend/src/pages/: Analytics.tsx  Consent.tsx  Overview.tsx  Runs.tsx  Security.tsx  Sources.tsx
scripts/: backup.sh
src/: README.md
src/pipeline/: cli.py
src/pipeline/analyse/: __init__.py  queries.py
src/pipeline/api/: __init__.py  app.py  auth.py  models.py  read.py
src/pipeline/common/: arff.py  (+6 more)
tests/: test_arff.py  test_auth.py  test_connectors.py  test_crypto.py  test_dates.py
(+15 files in other folders)
